[CoordinatedGraphics] invisible webview should not paint the content https://bugs.webkit.org/show_bug.cgi?id=150662

Reviewed by Darin Adler.

Suspend or resume the painting instead of just initializing m_isPaintingSuspended
for invisible webview not to paint the content until visibility is changed.

* WebProcess/WebPage/CoordinatedGraphics/CoordinatedDrawingArea.cpp:
(WebKit::CoordinatedDrawingArea::CoordinatedDrawingArea):


Canonical link: https://commits.webkit.org/169072@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191987 268f45cc-cd09-0410-ab3c-d52691b4dbfc